# rv198-start

./: .gitignore  AGENTS.md  CHANGELOG.md  NOTICE  README.md  pyproject.toml
_archive/: README.md
backlog/: README.md  board.yaml
docs/: 2026-04-23-v0.6-规划意见与工单计划.md  2026-04-24-v0.7-world-alignment-charter.md  2026-04-26-v0.8-project-narrative-language-plan.md  CONTRIBUTING.md  KiU v0 6 方向性调整 · v0 5 审计.md  blind-review-howto.md  concept-language-glossary.md  condition-dependent-validation-backlog.md  kiu-skill-spec-v0.1.md  kiu-skill-spec-v0.3.md  kiu-skill-spec-v0.6.md  kiu-v0.2-pipeline.md  project-architecture-narrative.md  third-party-attribution.md  usage-guide.md  user-facing-evaluation-guide.md  v0.8-architecture-language-design.md
evidence/: README.md
examples/: README.md  财务报表分析_Markdown版.md
installable-skills/: manifest.json
reports/: 2026-04-23-p0-fix-verification.md  2026-04-23-v0.5-vs-cangjie-conclusion.md  2026-04-24-cangjie-shortfalls-and-overperformance-strategy.md  2026-04-24-v0.6.4-borrowed-value-evidence.md  2026-04-25-v0.6.6-blind-review-pack-fix-evidence.md  2026-04-25-v0.6.8-final-closure-evidence.md  2026-04-25-v0.6.8-review-feedback-and-closure-plan.md  2026-04-25-v0.7.0-poor-charlie-same-book-cangjie-reference.md  2026-04-25-v0.7.1-evaluation-synthesis.md  2026-04-25-v0.7.1-world-alignment-gate-evidence.json  2026-04-25-v0.7.1-world-alignment-gate-evidence.md  2026-04-26-v0.7.1-audit-response-addendum.md  2026-04-26-v0.7.2-application-readiness-evidence.md  2026-04-26-v0.7.2-evaluation-pass.md  v0.6.8-role-boundary-robustness.md  (+3 more)
(+917 files in other folders)
