[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kiu"
version = "0.8.2"
description = "Knowledge in Use skill bundle schemas, validator, and candidate pipeline."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]
